--- a/FileRepositoryAPI/Web.config
+++ b/FileRepositoryAPI/Web.config
@@ -19,10 +19,11 @@
 		<add key="MailServer" value="smtpout.secureserver.net" />
 		<add key="MailPort" value="25" />
 		<add key="MailServerUsername" value="prakash@arohansystems.com" />
-		<add key="MailServerPassword" value="prakash123"/>
-		<add key="ApplicationUrl" value="http://localhost:51661/api/"/>
-		<add key="NotificationTemplatePath" value="E:/GITHUB/FileRepository/FileRepository-Backend/FileRepositoryAPI/MailTemplates/NotifiationMail.html"/>
-		<add key="NotificationNoOfDays" value="15"/>
+		<add key="MailServerPassword" value="prakash@123$"/>
+		<add key="ApplicationUrl" value="http://localhost:51664/api/"/>
+		<add key="NotificationTemplatePath" value="E:/GITHUB/FileRepository/Repository-Backend/FileRepositoryAPI/MailTemplates/NotifiationMail.html"/>
+		<add key="RejectNotificationTemplatePath" value="E:/GITHUB/FileRepository/Repository-Backend/FileRepositoryAPI/MailTemplates/RejectRepository.html"/>
+		<add key="FinalApprovalNotificationTemplatePath" value="E:/GITHUB/FileRepository/Repository-Backend/FileRepositoryAPI/MailTemplates/FinalApproval.html"/>
 		
 		<add key="AWSBucketName" value="c2ops-bucket" />
 		<add key="AWSSubDirectoryInBucket" value="facility-images" />
