Mod - WebUserID & Dropdown User List

--- a/FileRepositoryAPI/Web.config
+++ b/FileRepositoryAPI/Web.config
@@ -24,6 +24,7 @@
 		<add key="NotificationTemplatePath" value="E:/GITHUB/FileRepository/Repository-Backend/FileRepositoryAPI/MailTemplates/NotifiationMail.html"/>
 		<add key="RejectNotificationTemplatePath" value="E:/GITHUB/FileRepository/Repository-Backend/FileRepositoryAPI/MailTemplates/RejectRepository.html"/>
 		<add key="FinalApprovalNotificationTemplatePath" value="E:/GITHUB/FileRepository/Repository-Backend/FileRepositoryAPI/MailTemplates/FinalApproval.html"/>
+		<add key="StopMail" value="Y" />
 		
 		<add key="AWSBucketName" value="c2ops-bucket" />
 		<add key="AWSSubDirectoryInBucket" value="facility-images" />
