--- a/FileRepositoryBL/app.config
+++ b/FileRepositoryBL/app.config
@@ -4,14 +4,14 @@
     <add name="ConnectionString" connectionString="Data Source=ASWS5; Initial Catalog=ATN; Integrated Security=false; User Id=sa; Password=arohan123$; Enlist=true;"/>
   </connectionStrings>!-->
   <appSettings>   
-	<add key="SenderEmailAddress" value="prakash@arohansystems.com" />
-    <add key="MailSubject" value="Mail Subject" />
-    <add key="EnableSSL" value="False"/>
-    <add key="MailServer" value="smtpout.secureserver.net" />
-    <add key="MailPort" value="25" />
-    <add key="MailServerUsername" value="prakash@arohansystems.com" />
-    <add key="MailServerPassword" value="prakash@123$"/>		
-    <add key="ApplicationUrl" value="http://localhost:51661/api/Approve/ApproveATN/"/>    
-    <add key="NotificationTemplatePath" value="E:/GITHUB/ATN/ATN-Backend/ATNAPI/MailTemplates/ATNMail.html"/>	
+	<add key="SenderEmailAddress" value="RepositoryTeam@alfalaval.com" />
+		<add key="MailSubject" value="Mail Subject" />
+		<add key="EnableSSL" value="False" />
+		<add key="MailServer" value="mailhubs.alfalaval.org" />
+		<add key="MailPort" value="25" />
+		<add key="MailServerUsername" value="" />
+		<add key="MailServerPassword" value="" />
+		<add key="ApplicationUrl" value="http://localhost:51664/api/"/>
+		<add key="NotificationTemplatePath" value="C:/CurrentProjects/RepositoryApplication/Repository-Backend/FileRepositoryAPI/MailTemplates/NotifiationMail.html"/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup></configuration>
