--- a/FileRepositoryAPI/Debug/Web.config
+++ b/FileRepositoryAPI/Debug/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <clear />
-    <add name="ConnectionString" connectionString="Data Source=INPOWS0143; Initial Catalog=FileRepository; Integrated Security=false; User Id=fr; Password=fr123$; Enlist=true;" providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=INPOWS0143; Initial Catalog=FileRepositoryTest; Integrated Security=false; User Id=fr; Password=fr123$; Enlist=true;" providerName="System.Data.SqlClient" />
     <!--<add name="ConnectionString" connectionString="Data Source=c2b.c0janqnyrkuj.us-west-1.rds.amazonaws.com,1399; Initial Catalog=c2b_db; Integrated Security=false; User Id=C2B_admin; Password=MalaStoreKar_0207; Enlist=true;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
@@ -24,7 +24,7 @@
     <add key="NotificationTemplatePath" value="C:/CurrentProjects/RepositoryApplication/Repository-Backend/FileRepositoryAPI/MailTemplates/NotifiationMail.html" />
     <add key="RejectNotificationTemplatePath" value="C:/CurrentProjects/RepositoryApplication/Repository-Backend/FileRepositoryAPI/MailTemplates/RejectRepository.html" />
     <add key="FinalApprovalNotificationTemplatePath" value="C:/CurrentProjects/RepositoryApplication/Repository-Backend/FileRepositoryAPI/MailTemplates/FinalApproval.html" />
-    <add key="StopMail" value="Y" />
+    <add key="StopMail" value="N" />
     <add key="AWSBucketName" value="c2ops-bucket" />
     <add key="AWSSubDirectoryInBucket" value="facility-images" />
     <add key="AWSProfileName" value="Profile Name" />
